--- a/index.html
+++ b/index.html
@@ -22,16 +22,21 @@
     <!-- Main -->
     <main>
         <div class="container">
-            <h1>Internet deve essere al servizio del "bene pubblico": il manifesto di Tim Berners-Lee</h1>
+
+            <div class="main-title">
+                <h1>Internet deve essere al servizio del "bene pubblico": il manifesto di Tim Berners-Lee</h1>
+            </div>
+            
 
             <div id="author">
                 Scritto da <span id="the-booleaner">The Booleaner</span>
             </div>
+
             <div id="publication-date">
                 il 10/10/2020
             </div>
 
-            <div>
+            <div class="image-container">
                 <img src="img/tim-1.jpg" alt="Tim Berners-Lee">
                 <img src="img/tim-2.jpg" alt="Tim Berners-Lee">
             </div>
@@ -58,29 +63,29 @@
                 <table>
                     <thead>
                         <tr>
-                            <th>Lorem ipsum dolor</th>
-                            <th>Lorem ipsum dolor</th>
-                            <th>Lorem ipsum dolor</th>
+                            <th class="smaller">Lorem ipsum dolor</th>
+                            <th class="smaller">Lorem ipsum dolor</th>
+                            <th class="larger">Lorem ipsum dolor</th>
                         </tr>
                     </thead>
 
                     <tbody>
                         <tr class="background-lightblue">
-                            <td>Lorem ipsum dolor</td>
-                            <td>Lorem ipsum dolor</td>
-                            <td>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Error aut perferendis eligendi doloribus reprehenderit beatae, in libero, debitis blanditiis unde voluptate explicabo. Assumenda nulla ex eum voluptatum blanditiis ipsum consequatur.</td>
+                            <td class="smaller">Lorem ipsum dolor</td>
+                            <td class="smaller">Lorem ipsum dolor</td>
+                            <td class="larger">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Error aut perferendis eligendi doloribus reprehenderit beatae, in libero, debitis blanditiis unde voluptate explicabo. Assumenda nulla ex eum voluptatum blanditiis ipsum consequatur.</td>
                         </tr>
 
                         <tr>
-                            <td>Lorem ipsum dolor</td>
-                            <td>Lorem ipsum dolor</td>
-                            <td>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Error aut perferendis eligendi doloribus reprehenderit beatae, in libero, debitis blanditiis unde voluptate explicabo. Assumenda nulla ex eum voluptatum blanditiis ipsum consequatur.</td>
+                            <td class="smaller">Lorem ipsum dolor</td>
+                            <td class="smaller">Lorem ipsum dolor</td>
+                            <td class="larger">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Error aut perferendis eligendi doloribus reprehenderit beatae, in libero, debitis blanditiis unde voluptate explicabo. Assumenda nulla ex eum voluptatum blanditiis ipsum consequatur.</td>
                         </tr>
 
                         <tr class="background-lightblue">
-                            <td>Lorem ipsum dolor</td>
-                            <td>Lorem ipsum dolor</td>
-                            <td>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Error aut perferendis eligendi doloribus reprehenderit beatae, in libero, debitis blanditiis unde voluptate explicabo. Assumenda nulla ex eum voluptatum blanditiis ipsum consequatur.</td>
+                            <td class="smaller">Lorem ipsum dolor</td>
+                            <td class="smaller">Lorem ipsum dolor</td>
+                            <td class="larger">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Error aut perferendis eligendi doloribus reprehenderit beatae, in libero, debitis blanditiis unde voluptate explicabo. Assumenda nulla ex eum voluptatum blanditiis ipsum consequatur.</td>
                         </tr>
                     </tbody>
                 </table>
@@ -95,7 +100,19 @@
 
     <!-- Footer -->
     <footer>
+        <div class="container">
+            <div id="may-be-interesting">
+                Potrebbero interessarti
+            </div>
 
+            <div class="first-image">
+                <div class="first-image-text">Lorem ipsum dolor</div>
+            </div>
+
+            <div class="second-image">
+                <div class="second-image-text">Lorem ipsum dolor</div>
+            </div>
+        </div>
     </footer>
     <!-- End Footer -->
 
