Completamento esercizio The Booleaners

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <main>
         <div class="container">
 
+            <!-- Titolo principale -->
             <div class="main-title">
                 <h1>Internet deve essere al servizio del "bene pubblico": il manifesto di Tim Berners-Lee</h1>
             </div>
@@ -36,6 +37,7 @@
                 il 10/10/2020
             </div>
 
+            <!-- Immagini Tim Berners Lee -->
             <div class="image-container">
                 <img src="img/tim-1.jpg" alt="Tim Berners-Lee">
                 <img src="img/tim-2.jpg" alt="Tim Berners-Lee">
@@ -51,6 +53,7 @@
 
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore, excepturi. Soluta provident fuga officiis beatae, in voluptatum iste cumque, odit iure inventore quia. Explicabo, corrupti obcaecati. Architecto, amet! Quam, delectus! <span class="background-yellow">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Reiciendis necessitatibus tenetur autem.</span> Necessitatibus at, nam voluptatibus maxime sunt sapiente sint quod explicabo odit. Eaque tempore enim numquam quos explicabo labore? Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam corporis impedit repudiandae ipsum voluptatem tempore ipsam, non quos quia eos alias saepe! Eveniet, quas! Architecto iste tenetur libero tempora perferendis?</p>
 
+            <!-- Lista non ordinata -->
             <div class="unordered-list">
                 <ul>
                     <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. A iste repellat, eaque, labore dolores tenetur cumque et veniam quam voluptatem.</li>
@@ -60,7 +63,9 @@
             </div>
 
             <div>
+                <!-- Inizio tabella -->
                 <table>
+                    <!-- Intestazione tabella -->
                     <thead>
                         <tr>
                             <th class="smaller">Lorem ipsum dolor</th>
@@ -68,7 +73,9 @@
                             <th class="larger">Lorem ipsum dolor</th>
                         </tr>
                     </thead>
+                    <!-- /Intestazione tabella -->
 
+                    <!-- Corpo tabella -->
                     <tbody>
                         <tr class="background-lightblue">
                             <td class="smaller">Lorem ipsum dolor</td>
@@ -88,7 +95,9 @@
                             <td class="larger">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Error aut perferendis eligendi doloribus reprehenderit beatae, in libero, debitis blanditiis unde voluptate explicabo. Assumenda nulla ex eum voluptatum blanditiis ipsum consequatur.</td>
                         </tr>
                     </tbody>
+                    <!-- /Corpo tabella -->
                 </table>
+                <!-- Fine tabella -->
             </div>
 
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ullam optio expedita accusamus numquam doloremque aperiam! Totam quos excepturi ab maxime minus enim suscipit esse non officiis facilis! Fuga, repellat quaerat! Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos dolorum libero aperiam sunt dicta numquam at recusandae esse quae quam fuga enim veritatis nesciunt, voluptas quasi. Soluta reprehenderit unde ea. Lorem ipsum dolor sit amet consectetur adipisicing elit. <span class="background-yellow">Quis itaque dolorum corporis modi distinctio soluta?</span> Earum tempora qui porro ut voluptatibus atque delectus sint eos nemo voluptatem, reprehenderit minus ratione?</p>
@@ -105,10 +114,12 @@
                 Potrebbero interessarti
             </div>
 
+            <!-- Prima immagine footer -->
             <div class="first-image">
                 <div class="first-image-text">Lorem ipsum dolor</div>
             </div>
 
+            <!-- Seconda immagine footer -->
             <div class="second-image">
                 <div class="second-image-text">Lorem ipsum dolor</div>
             </div>
