--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!-- Header -->
     <header>
         <div class="container">
-            <img src="img/logo.svg" alt="">
+            <img src="img/logo.svg" alt="The Booleaners Logo">
         </div>
         
     </header>
